[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-main"
version = "0.1.0"
description = "Gradio client for Conductor Core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "conductor-core[providers,playback] @ git+https://github.com/laceyp99/conductor-core.git@0132ee6fd1de1879713fd356fb507b7e937bf66c",
    "gradio==6.20.0",
    "mido==1.3.3",
    "plotly==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[project.scripts]
conductor-main = "conductor_main.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
